--- a/public/Dashboard/Admin.css
+++ b/public/Dashboard/Admin.css
@@ -259,3 +259,44 @@ h1 {
   display: block;
   font-size: 16px;
 }
+
+#userSearch {
+  width: 200px;
+  display: block;
+  margin: 0em 0em 1em;
+  border: 2px solid slategray;
+  padding: .5em 1em;
+}
+
+#userSearch[data-value] {
+  border-color: green;
+}
+
+#userSearchResults {
+  margin-bottom: 1em;
+  position: absolute;
+  background-color: white;
+  visibility: hidden;
+  z-index: 10;
+}
+
+#userSearch:focus + #userSearchResults {
+  visibility: visible;
+}
+
+.search-result {
+  width: 200px;
+  cursor: pointer;
+  padding: .5em 1em;
+  border-top: 1px solid slategray;
+  border-inline: 1px solid slategray;
+  border-bottom: none;
+}
+
+.search-result:last-child {
+  border-top: 1px solid slategray;
+}
+
+.search-result:last-child {
+  border-bottom: 1px solid slategray;
+}
