--- a/public/test-taker.css
+++ b/public/test-taker.css
@@ -92,6 +92,34 @@ img {
   max-width: 100%;
 }
 
+.spinner {
+  display: block;
+  border: 3px solid white;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  width: 1.25em;
+  height: 1.25em;
+  animation: spin 750ms linear infinite;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
+
 /* fix position of mathjax */
 #bimg {
   position: relative;
@@ -197,8 +225,22 @@ section.hide {
   cursor: pointer;
 }
 
-.landing .content .assignment > * {
+.landing .content .assignment.hide {
+  display: none;
+}
+
+.landing .content .assignment * {
   margin: 0;
+}
+
+.landing .content .assignment svg {
+  margin-right: .5em;
+  height: 1.3em;
+  fill: white;
+}
+
+.landing .content .assignment p {
+  margin-right: .5em;
 }
 
 .landing .content .previous-assignment-wrapper .subsections {
@@ -408,7 +450,7 @@ section.hide {
   flex: 1.25;
 }
 
-.main .panels .passage-container {
+#passageContent {
   margin-top: 1em;
   column-count: var(--passage-columns);
 }
@@ -518,7 +560,7 @@ section.hide {
   border-color: var(--accent-color)
 }
 
-.main .panels .question .choice > * {
+.main .panels .question .choice * {
   margin: 0;
 }
 
