--- a/public/Site Templates/site-wide.css
+++ b/public/Site Templates/site-wide.css
@@ -26,6 +26,40 @@
   position: absolute;
 }
 
+#siteWideLoadingScreen {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  background-color: white;
+  z-index: 9999;
+  display: flex;
+}
+
+body.authorized > #siteWideLoadingScreen {
+  display: none;
+}
+
+#siteWideLoadingScreen:before {
+  content: '';
+  display: block;
+  border: 20px solid white;
+  border-top: 20px solid #110D65;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 2s linear infinite;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
