--- a/public/new-assignment.css
+++ b/public/new-assignment.css
@@ -1,16 +1,25 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 main {
   padding: 2em;
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
 }
 
 main > section {
   width: 50%;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
+@media screen and (max-width: 800px) {
+  main {
+    flex-direction: column;
+  }
+
+  main > section {
+    width: 100%;
+  }
 }
 
 .input {
@@ -90,6 +99,27 @@ button {
 
 #topicWrapper > div {
   display: none;
+  grid-template-columns: auto auto 4em 1fr 1fr 1fr;
+  align-items: center;
+  row-gap: .5em;
+}
+
+#topicWrapper > div > * {
+  margin: 0em 0.5em 0em 0em;
+}
+
+#topicWrapper > div > *:nth-child(-n+6) {
+  border-bottom: 2px solid black;
+  position: relative;
+}
+
+#topicWrapper > div > *:nth-child(-n+6):not(input[type="checkbox"])::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  left: -19px;
+  border-bottom: 2px solid black;
 }
 
 #lessonWrapper {
@@ -100,9 +130,30 @@ button {
 
 #lessonWrapper > div {
   display: none;
+  grid-template-columns: auto 7em;
+  align-items: center;
+  row-gap: .5em;
 }
 
-.topic-row {
+#lessonWrapper > div > * {
+  margin: 0em 0.5em 0em 0em;
+}
+
+#lessonWrapper > div > *:nth-child(-n+2) {
+  border-bottom: 2px solid black;
+  position: relative;
+}
+
+#lessonWrapper > div > *:nth-child(-n+1):not(input[type="checkbox"])::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  right: -20px;
+  border-bottom: 2px solid black;
+}
+
+/* .topic-row {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -120,11 +171,16 @@ button {
 
 .topic-row > input[type='number'] {
   width: 4em;
+  margin-right: .5em;
   margin-left: auto;
+}
+
+.topic-row > input[type='number'].align {
+  
 }
 
 .topic-row > button {
   width: 7em;
   height: 21px;
   margin-left: auto;
-}
+} */
