--- a/public/test-taker.css
+++ b/public/test-taker.css
@@ -203,6 +203,54 @@ section.hide {
   overflow-y: auto;
 }
 
+.landing .loading {
+  display: none;
+}
+
+.landing .loading.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 0, 0, 0.7);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+}
+
+.landing .loading.active::after {
+  content: '';
+  display: block;
+  height: 4em;
+  width: 4em;
+  border: 4px solid transparent;
+  border-top-color: var(--main-background);
+  /* border-bottom-color: var(--main-background); */
+  border-radius: 50%;
+  animation: full-turn 1200ms cubic-bezier(.75, -0.50, 0.25, 1.00) infinite;
+  /* animation: wind-up-and-spin 1500ms linear infinite; */
+}
+
+@keyframes half-turn {
+  0% { transform: rotate(0deg); }
+  80% { transform: rotate(180deg); }
+  100% { transform: rotate(180deg); }
+}
+
+@keyframes full-turn {
+  0% { transform: rotate(0deg); }
+  75% { transform: rotate(360deg); }
+  100% { transform: rotate(360deg); }
+}
+
+@keyframes wind-up-and-spin {
+  0% { transform: rotate(0deg); }
+  30% { transform: rotate(-45deg); }
+  70% { transform: rotate(405deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .landing .content {
   padding: 4em;
   display: grid;
