--- a/public/new-invoice.css
+++ b/public/new-invoice.css
@@ -16,13 +16,42 @@ body {
   margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-  margin-top: 0;
-}
-
 label {
   display: inline-block;
   margin: 1em 0em 0em;
+}
+
+label[data-hint] {
+  position: relative;
+}
+
+label[data-hint]::before {
+  content: '?';
+  display: inline-block;
+  margin-right: .25em;
+  padding: 3px 7px;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  background-color: #F2F2F2;
+  /* border: 2px solid #F2F2F2; */
+}
+
+label[data-hint]::after {
+  content: attr(data-hint);
+  display: block;
+  padding: .5em 1em;
+  position: absolute;
+  border: 2px solid #F2F2F2;
+  width: 16em;
+  top: 100%;
+  left: 0%;
+  background-color: white;
+  visibility: hidden;
+}
+
+label[data-hint]:hover::after {
+  visibility: visible;
 }
 
 input,
@@ -39,11 +68,35 @@ input {
   width: 100%
 }
 
-input[isvalid='false'] {
+input[data-isvalid='false'],
+search-input[data-isvalid='false'] {
   color: #D95454;
   border-color: #D95454;
 }
 
+.error-msg {
+  position: relative;
+}
+
+.error-msg::before {
+  content: attr(data-msg);
+  display: block;
+  padding: .5em 1em;
+  position: absolute;
+  width: 16em;
+  top: 100%;
+  left: 0%;
+  background-color: #D95454;
+  color: white;
+  visibility: hidden;
+}
+
+input[data-isvalid='false']:hover + .error-msg::before,
+search-input[data-isvalid='false']:hover + .error-msg::before {
+  visibility: visible;
+}
+
+input[type='radio'],
 input[type='checkbox'] {
   display: inline-block;
   width: auto;
@@ -66,11 +119,11 @@ button {
 
 search-input {
   width: 20em;
-  margin-bottom: 1em;
+  /* margin-bottom: 1em; */
   display: block;
   background-color: white;
   color: black;
-  border-color: slategray;
+  border-color: #F2F2F2;
 }
 
 table > thead th {
@@ -121,8 +174,19 @@ table td.remove > button::after {
   transform: rotate(45deg);
 }
 
+#events-wrapper > div {
+  border: 2px solid #F2F2F2;
+  padding: 0.5em 1em;
+  width: max-content;
+  margin-bottom: 1em;
+}
+
+#events-wrapper > div > label {
+  margin: 0;
+}
+
 #super-secret {
-  margin-top: 10em;
+  margin-top: 6em;
 }
 
 #super-secret.hidden {
