--- a/public/invoice.css
+++ b/public/invoice.css
@@ -148,242 +148,18 @@ p {
   }
 }
 
-header {
-  background: var(--color-blue);
-  color: var(--color-primary);
-  text-align: center;
-  position: sticky;
-  top: 0px;
-  z-index: 999;
-  width: 100%;
-  padding: 1em 0em;
-  /* box-shadow: #00000041 0em .5em 20px; */
-  transition: background-color 200ms ease-in;
-}
-
-header li {
-  margin: 0px;
-}
-
-header li::before {
-  content: none;
-}
-
-.logo {
-  margin-left: .5em;
-  width: 5em;
-  display: block;
-  margin-top: 2px;
-  fill: white;
-}
-
-.phone {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.phone a {
-  display: flex;
-  background-color: var(--color-green);
-  color: white;
-  padding: .5em 1.5em;
-  align-items: center;
-  justify-content: center;
-  border-radius: .5em;
-}
-
-.phone a svg {
-  margin-right: .5em;
-  fill: white;
-}
-
-/* changed this from the tutorial video to
-   allow it to gain focus, making it tabbable */
-.nav-toggle {
-  position: absolute !important;
-  top: -9999px !important;
-  left: -9999px !important;
-}
-
-.nav-toggle:focus ~ .nav-toggle-label {
-  outline: 3px solid rgba(lightblue, .75);
-}
-
-.nav-toggle-label {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-right: 1em;
-  height: 50%;
-  display: flex;
-  align-items: center;
-}
-
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-  display: block;
-  background: var(--color-primary);
-  height: 2px;
-  width: 2em;
-  border-radius: 2px;
-  position: relative;
-}
-
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-  content: '';
-  position: absolute;
-}
-
-.nav-toggle-label span::before {
-  bottom: 7px;
-}
-
-.nav-toggle-label span::after {
-  top: 7px;
-}
-
-nav {
-  position: absolute;
-  text-align: right;
-  top: 100%;
-  right: 0;
-  background: var(--color-blue);
-  box-shadow: #00000041 0em .5em 20px;
-  width: 100%;
-  transform: scale(1, 0);
-  transform-origin: top;
-  transition: transform 400ms ease-in-out;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  margin-bottom: 1em;
-  margin-right: 1em;
-}
-
-nav a {
-  color: inherit;
-  text-decoration: none;
-  font-size: 1rem;
-  opacity: 0;
-  transition: opacity 150ms ease-in-out;
-}
-
-nav .enroll {
-  font-size: 1rem;
-}
-
-.enroll {
-  padding: .7em 1.8em;
-  border-radius: .4em;
-  background-image: linear-gradient(45deg, #ffca02, 65%, #ea5a5a);
-  font-weight: bold;
-  font-size: 1em;
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-nav a:hover {
-  text-decoration: none;
-}
-
-.nav-toggle:checked ~ nav {
-  transform: scale(1,1);
-}
-
-.nav-toggle:checked ~ nav a {
-  opacity: 1;
-  transition: opacity 250ms ease-in-out 250ms;
-}
-
-@media screen and (min-width: 800px) {
-  .nav-toggle-label {
-    display: none;
-  }
-
-  header {
-    display: grid;
-    grid-template-columns: .2fr auto minmax(600px, 3fr) auto .2fr;
-  }
-  
-  .logo {
-    grid-column: 2 / 3;
-    margin-left: 0;
-  }
-
-  .phone {
-    grid-column: 4 / 5;
-    justify-content: flex-end;
-    margin-left: 1em;
-  }
-  
-  nav {
-    all: unset; /* this causes issues with Edge, since it's unsupported */
-    
-    /* the following lines are not from my video, but add Edge support */
-    /* position: relative;
-    text-align: left;
-    transition: none;
-    transform: scale(1,1);
-    background: none;
-    top: initial;
-    left: initial; */
-    /* end Edge support stuff */
-    
-    grid-column: 3 / 4;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  nav ul {
-    display: flex;
-  }
-  
-  nav li {
-    margin-left: 3em;
-    margin-bottom: 0;
-  }
-  
-  nav a {
-    opacity: 1;
-    position: relative;
-  }
-  
-  nav a:not(.enroll)::before {
-    content: '';
-    display: block;
-    height: 5px;
-    background: var(--color-primary);
-    position: absolute;
-    top: -.75em;
-    left: 0;
-    right: 0;
-    transform: scale(0, 1);
-    transition: transform ease-in-out 250ms;
-  }
-  
-  nav a:hover::before {
-    transform: scale(1,1);
-  }
-}
-
 main {
   padding: 1em;
-  min-height: 65vh;
+  /* min-height: 65vh; */
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+@media screen and (min-width: 800px) {
+  main {
+    padding: 3em;
+  }
 }
 
 .page-nav {
@@ -535,6 +311,36 @@ main {
   right: calc(1em + 2px);
   transition: right 250ms ease;
 }
+
+#invoice > .invoice-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 1em;
+}
+
+#invoice > .invoice-row.separator {
+  border-top: 2px solid #E7E8E9;
+}
+
+#invoice > .invoice-row > .start {
+  text-align: start;
+}
+
+#invoice > .invoice-row > .end {
+  text-align: end;
+}
+
+#invoice > .invoice-row p {
+  margin: 0.5em 0em;
+  font-size: 1em;
+}
+
+#invoice > .invoice-row p.sub {
+  color: #A3A3A3;
+  font-size: .75em;
+}
+
 
 .invoice-details {
   border: 2px solid var(--color-secondary);
