--- a/public/sign-up.css
+++ b/public/sign-up.css
@@ -44,6 +44,37 @@ body {
   background-color: var(--color-secondary);
 }
 
+main.loading::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.25;
+}
+
+main.loading::after {
+  box-sizing: border-box;
+  content: '';
+  display: inline-block;
+  margin-left: 1em;
+  position: absolute;
+  bottom: calc(50% - 5em);
+  left: calc((50% - 5em));
+  width: 10em;
+  height: 10em;
+  border-radius: 50%;
+  border: 20px solid transparent;
+  border-top: 20px solid white;
+  animation: spin 700ms linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 a {
   cursor: pointer;
   text-decoration: none;
@@ -197,6 +228,26 @@ img {
   color: white;
   font-size: 1em;
   cursor: pointer;
+}
+
+#signup input[type='submit'].loading::after {
+  box-sizing: border-box;
+  content: '';
+  display: inline-block;
+  margin-left: 1em;
+  position: relative;
+  bottom: 0;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  border-top: 2px solid white;
+  animation: spin 500ms linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 #signup .error {
