ready for applications

--- a/public/test-taker.css
+++ b/public/test-taker.css
@@ -672,6 +672,7 @@ section.hide {
   width: 100%;
   position: sticky;
   top: 0;
+  z-index: 999;
 }
 
 .main .panels .question .show-passage > button {
